# facerec-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dataset_hdf5.hpp  draw.hpp  infer_cam.cpp  infer_photo.cpp  recognition.hpp  recognition_hdf5.hpp
dataset_face/: DatasetFace.cpp  dataset_hdf5.hpp  dataset_proto.hpp  face_dataset.pb.cc  face_dataset.pb.h
libtorch/: build-hash  build-version
libtorch/include/ATen/: CPUType.h  CUDAType.h  Config.h  Functions.h  LegacyTHFunctionsCPU.h  LegacyTHFunctionsCUDA.h  NativeFunctions.h  QuantizedCPUType.h  QuantizedCUDAType.h  SparseCPUType.h  TypeDefault.h
libtorch/include/ATen/core/: TensorBody.h  TensorMethods.h
libtorch/include/caffe2/core/: macros.h
libtorch/lib/: libfmt.so.6  libuv.so.1
libtorch/share/cmake/Caffe2/: Caffe2Targets-release.cmake  Caffe2Targets.cmake
libtorch/share/cmake/Torch/: TorchConfig.cmake
mtcnn/: face.h  rnet.cpp
